<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">For Free</string>
    <string name="start_check_energy">Start check energy</string>
    <color name="color_alpha">#00000000</color>
    <color name="color_btn_down">#F0F0F0</color>
    <string name="hello_user">Hello User!</string>
    <string name="base_configuration">BASE CONFIGURATION</string>
    <string name="immediate_effect">Immediate effect</string>
    <string name="record_log">Record log</string>
    <string name="show_toast">Show toast</string>
    <string name="stay_awake">Stay awake</string>
    <string name="timeout_restart_activity">Restart activity when timeout</string>
    <string name="forest_configuration">FOREST CONFIGURATION</string>
    <string name="collect_energy">Collect energy</string>
    <string name="check_interval_minutes">Check interval (minutes)</string>
    <string name="thread_count">Thread count</string>
    <string name="advance_time_milliseconds">Advance time (milliseconds)</string>
    <string name="collect_interval_milliseconds">Collect interval (milliseconds)</string>
    <string name="collect_timeout_seconds">Collect timeout (seconds)</string>
    <string name="return_water_33">Return water 33</string>
    <string name="return_water_18">Return water 18</string>
    <string name="return_water_10">Return water 10</string>
    <string name="help_friend_collect">Help friend collect</string>
    <string name="don_t_help_collect_list">Don\'t help collect list</string>
    <string name="don_t_collect_list">Don\'t collect list</string>
    <string name="receive_forest_task_award">Receive forest task award</string>
    <string name="water_friend_list">Water friend list</string>
    <string name="cooperate_water">Cooperate water</string>
    <string name="cooperate_water_list">Cooperate water list</string>
    <string name="farm_configuration">FARM CONFIGURATION</string>
    <string name="enable_farm">Enable farm</string>
    <string name="reward_friend">Reward friend</string>
    <string name="send_back_animal">Send back animal</string>
    <string name="send_type">Send type</string>
    <string name="don_t_send_friend_list">Don\'t send friend list</string>
    <string name="recall_animal_type">Recall animal type</string>
    <string name="receive_farm_tool_reward">Receive farm tool reward</string>
    <string name="use_new_egg_tool">Use new egg tool</string>
    <string name="harvest_produce">Harvest produce</string>
    <string name="answer_question">Answer question</string>
    <string name="donation">Donation</string>
    <string name="receive_farm_task_award">Receive farm task award</string>
    <string name="feed_animal">Feed animal</string>
    <string name="use_accelerate_tool">Use accelerate tool</string>
    <string name="feed_friend_animal_list">Feed friend animal list</string>
    <string name="notify_friend">Notify friend</string>
    <string name="don_t_notify_friend_list">Don\'t notify friend list</string>
    <string name="other_configuration">OTHER CONFIGURATION</string>
    <string name="receive_point">Receive point</string>
    <string name="open_treasure_box">Open treasure box</string>
    <string name="receive_coin_asset">Receive coin asset</string>
    <string name="donate_charity_coin">Donate charity coin</string>
    <string name="min_exchange_count">Min exchange count</string>
    <string name="latest_exchange_time_24_hour_system">Latest exchange time (24-hour system)</string>
    <string name="koubei_sign_in">Koubei sign in</string>
    <string name="more">MORE</string>
    <string name="support_developer">Support developer</string>
    <string name="support_xqe_developer">Support XQE developer</string>
    <string name="support_first_developer">Support First developer</string>
    <string name="forest_log">Forest log</string>
    <string name="farm_log">Farm log</string>
    <string name="other_log">Other log</string>
    <string name="unactivated">UNACTIVATED</string>
    <string name="tips">Tips</string>
    <string name="hide_the_application_icon">Hide the application icon</string>
    <string name="export_the_statistic_file">Export the statistic file</string>
    <string name="import_the_statistic_file">Import the statistic file</string>
    <string name="settings">Settings</string>
    <string name="limit_collect">Limit collect</string>
    <string name="limit_count_per_minute">Limit count per minute</string>
    <string name="energy_rain">Energy Rain</string>
    <string name="give_energy_rain_list">Give energy rain list</string>
    <string name="sync_step_count">Sync Step Count</string>
    <string name="stay_awake_type">Stay awake type</string>
    <string name="use_double_card">Use double card</string>
    <string name="wait_when_exception">Wait when exception(Min)</string>
    <string name="stay_awake_target">Stay awake target</string>
    <string name="search">Search</string>
    <string name="last">Last</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="open_with_other_browser">Open with other browser</string>
    <string name="copy_the_url">Copy the url</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="scroll_to_bottom">Scroll to bottom</string>
    <string name="choose_a_browser">Choose a browser</string>
    <string name="copy_success">Copy success</string>
    <string name="cancel">Cancel</string>
    <string name="collect_watering_bubble">Collect watering bubble</string>
    <string name="use_double_card_time">Use double card time</string>
    <string name="animal_sleep_time">Animal sleep time</string>
    <string name="visit_github">Visit GitHub</string>
    <string name="visit_qqGround">Visit QQchannel</string>
    <string name="help_wiki">Help Wiki</string>
    <string name="exchange_energy_double_click">Exchange energy double click</string>
    <string name="exchange_energy_double_click_count">Exchange energy double click count</string>
    <string name="reserve">Reserve</string>
    <string name="reserve_list">Reserve list</string>
    <string name="eco_life_tick">Eco Life Tick</string>
    <string name="ancient_tree">Ancient Tree</string>
    <string name="ancient_tree_citycode_list">Ancient Tree Citycode List</string>
    <string name="ancient_tree_area_code_list">Ancient tree area code list</string>
    <string name="ancient_tree_only_week">Ancient Tree only week</string>
    <string name="antdodo_collect">Antdodo Collect</string>
    <string name="ant_ocean">Ant ocean</string>

</resources>
