<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="12dp">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/farm_configuration"
			android:padding="10dp"
			android:background="#FF89bb89"
			android:textColor="#FFFFFFFF"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/enable_farm"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_limitCollect"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/reward_friend"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_rewardFriend"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/send_back_animal"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_sendBackAnimal"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/send_type"
			android:textAllCaps="false"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:gravity="start|center_vertical"
			android:background="@drawable/button"
			android:id="@+id/btn_sendType"
			android:paddingStart="8dp"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/don_t_send_friend_list"
			android:textAllCaps="false"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:gravity="start|center_vertical"
			android:background="@drawable/button"
			android:id="@+id/btn_dontSendFriendList"
			android:paddingStart="8dp"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/recall_animal_type"
			android:textAllCaps="false"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:gravity="start|center_vertical"
			android:background="@drawable/button"
			android:id="@+id/btn_recallAnimalType"
			android:paddingStart="8dp"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/receive_farm_tool_reward"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_receiveFarmToolReward"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/use_new_egg_tool"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_useNewEggTool"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/harvest_produce"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_harvestProduce"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/donation"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_donation"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/answer_question"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_answerQuestion"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/receive_farm_task_award"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_receiveFarmTaskAward"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/feed_animal"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_feedAnimal"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/use_accelerate_tool"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_useAccelerateTool"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/feed_friend_animal_list"
			android:textAllCaps="false"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:gravity="start|center_vertical"
			android:background="@drawable/button"
			android:id="@+id/btn_feedFriendAnimalList"
			android:paddingStart="8dp"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/animal_sleep_time"
			android:textAllCaps="false"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:gravity="start|center_vertical"
			android:background="@drawable/button"
			android:id="@+id/btn_animalSleepTime"
			android:paddingStart="8dp"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/notify_friend"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_notifyFriend"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/don_t_notify_friend_list"
			android:textAllCaps="false"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:gravity="start|center_vertical"
			android:background="@drawable/button"
			android:id="@+id/btn_dontNotifyFriendList"
			android:paddingStart="8dp"/>

	</LinearLayout>

</LinearLayout>

