<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="12dp">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/base_configuration"
			android:background="#FF898989"
			android:textColor="#FFFFFFFF"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/immediate_effect"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_immediateEffect"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/record_log"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_recordLog"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/show_toast"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_showToast"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/stay_awake"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_stayAwake"/>
		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/stay_awake_type"
			android:textAllCaps="false"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:gravity="start|center_vertical"
			android:background="@drawable/button"
			android:id="@+id/btn_stayAwakeType"
			android:paddingStart="8dp"/>
		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/stay_awake_target"
			android:textAllCaps="false"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:gravity="start|center_vertical"
			android:background="@drawable/button"
			android:id="@+id/btn_stayAwakeTarget"
			android:paddingStart="8dp"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/timeout_restart_activity"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_timeoutRestart"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/wait_when_exception"
			android:textAllCaps="false"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:gravity="start|center_vertical"
			android:background="@drawable/button"
			android:id="@+id/btn_waitWhenException"
			android:paddingStart="8dp"/>

	</LinearLayout>

</LinearLayout>

