<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="12dp">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/other_configuration"
			android:background="#FF898989"
			android:textColor="#FFFFFFFF"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/receive_point"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_receivePoint"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/open_treasure_box"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_openTreasureBox"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/donate_charity_coin"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_donateCharityCoin"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/min_exchange_count"
			android:textAllCaps="false"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:gravity="start|center_vertical"
			android:background="@drawable/button"
			android:id="@+id/btn_minExchangeCount"
			android:paddingStart="8dp"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/latest_exchange_time_24_hour_system"
			android:textAllCaps="false"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:gravity="start|center_vertical"
			android:background="@drawable/button"
			android:id="@+id/btn_latestExchangeTime"
			android:paddingStart="8dp"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/sync_step_count"
			android:textAllCaps="false"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:gravity="start|center_vertical"
			android:background="@drawable/button"
			android:id="@+id/btn_syncStepCount"
			android:paddingStart="8dp"/>

		<CheckBox
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/koubei_sign_in"
			android:onClick="onClick"
			android:minHeight="50dp"
			android:id="@+id/cb_kbSignIn"/>

	</LinearLayout>

</LinearLayout>

